--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.5",
+    "@chakra-ui/checkbox": "^2.3.2",
+    "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/radio": "^2.1.2",
     "@chakra-ui/react": "^3.8.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -18,12 +21,14 @@
     "@faustwp/core": "^3.0.1",
     "@wordpress/block-editor": "^14.13.0",
     "date-fns": "^4.1.0",
+    "final-form": "^4.20.10",
     "framer-motion": "^12.4.7",
     "graphql": "^16.8.2",
     "next": "^14.2.22",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-final-form": "^6.5.9",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
